--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <header id="header" class="row">
 
    		<div class="header-logo">
-	        <a href="index.html">Dazzle</a>
+	        <a href="index.html">New Agency Site</a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
