--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>New Agency Site</title>
+    <title>Dazzle</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -44,7 +44,7 @@
    <header id="header" class="row">
 
    		<div class="header-logo">
-	        <a href="index.html">New Agency Site</a>
+	        <a href="index.html">Dazzle</a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
